--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-service
@@ -6,7 +6,7 @@ metadata:
     # For traffic routing to server at /api, rewrite 
     # as just / as it reaches its dest service
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/use-regex: 'true'
+    nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
@@ -14,11 +14,13 @@ spec:
         paths:
           # route all / request to client 
           - path: /?(.*)
+            pathType: Prefix
             backend:
               serviceName: client-cluster-ip-service
               servicePort: 3000
           # route all /api requests to server
           - path: /api/?(.*)
+            pathType: Prefix
             backend: 
               serviceName: server-cluster-ip-service
               servicePort: 5000
