--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -8,9 +8,32 @@ metadata:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$1
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
+  tls:
+    - hosts:
+        - sendclub.app
+        - www.sendclub.app
+      secretName: sendclub-app
   rules:
-    - http:
+    - host: sendclub.app
+      http:
+        paths:
+          # route all / request to client 
+          - path: /?(.*)
+            pathType: Prefix
+            backend:
+              serviceName: client-cluster-ip-service
+              servicePort: 3000
+          # route all /api requests to server
+          - path: /api/?(.*)
+            pathType: Prefix
+            backend: 
+              serviceName: server-cluster-ip-service
+              servicePort: 5000
+    - host: www.sendclub.app
+      http:
         paths:
           # route all / request to client 
           - path: /?(.*)
